--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
 
     <header>
-      <h1>vital glow</h1>
+     <img src="logo2.png" class="logo2" alt="">
+      
 
       <p>Rutinas de belleza para rostro, cabello y cuerpo</p>
     </header>
