--- a/facial.html
+++ b/facial.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cuidado Facial</title>
   <link rel="stylesheet" href="estilos.css/styles.css">
   <style>
@@ -12,25 +13,108 @@
       color: #444;
       padding: 2rem;
     }
+
     h1 {
       color: #b56576;
     }
+
     a {
       color: #a24d61;
       text-decoration: none;
     }
   </style>
-   
+
 </head>
+
 <body>
   <h1>Cuidado Facial</h1>
-  <p>Descubre rutinas para mantener tu rostro limpio, hidratado y protegido. Aquí encontrarás tips, productos y tratamientos naturales que ayudan a mejorar la salud de tu piel.</p>
+  <p>Descubre rutinas para mantener tu rostro limpio, hidratado y protegido. Aquí encontrarás productos y
+    tratamientos naturales que ayudan a mejorar la salud de tu piel.</p>
   <ul>
-    <li>Limpieza diaria suave</li>
-    <li>Mascarillas hidratantes y exfoliantes</li>
-    <li>Uso de protector solar</li>
-    <li>Ingredientes como aloe vera, pepino y avena</li>
+    
+    <div class="producto">
+      <img src="images/mascarilladearcilla.png" alt="Mascarilla de arcilla">
+      <h3>paquete de 3 mascarillas de arcilla</h3>
+      <p class="precio">$50.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+   </div>
+
+    <div class="producto">
+      <img src="images/mascarilla.png" alt="Mascarilla de arcilla">
+      <h3>mascarilla kaisasa</h3>
+      <p class="precio">35.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/serumfacial.png.jpg" alt="serumfacialmelu">
+      <h3>serum facial Melu</h3>
+      <p class="precio">30.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/SérumFaciaGarnier.png.jpg" alt="serumfacialgarniel">
+      <h3>serum facial SérumFaciaGarnier</h3>
+      <p class="precio">55.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/protectorsolar.png.jpg" alt="protectorsolar">
+      <h3>protectorsolar</h3>
+      <p class="precio">65.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/labialnivea.png" alt="labialnivea">
+      <h3>labialnivea</h3>
+      <p class="precio">25.000 c/u</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+    
+
+    <div class="producto">
+      <img src="images/labialhidratante.png" alt="labialhidratante">
+      <h3>labialhidratante</h3>
+      <p class="precio">17.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/contornodeojoscerave.png" alt="contornodeojoscerave">
+      <h3>contornodeojoscerave</h3>
+      <p class="precio">55.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/contornodeojos.png" alt="contornodeojos">
+      <h3>contornodeojos</h3>
+      <p class="precio">30.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
   </ul>
   <p><a href="index.html">← Volver al inicio</a></p>
 </body>
+
 </html>
