--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <header>
-     <img src="logo2.png" class="logo2" alt="">
+     <img src="images/logo2.png" class="logo2" alt="">
       
 
       <p>Rutinas de belleza para rostro, cabello y cuerpo</p>
