--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>vital glow</title>
   <link rel="stylesheet" href="estilos.css/styles.css">
+<style>
+    .btn-comprar {
+      display: inline-block;
+      background-color: #f9c5d1;
+      color: #fff;
+      padding: 10px 20px;
+      font-size: 16px;
+      text-decoration: none;
+      border: none;
+      border-radius: 25px;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .btn-comprar:hover {
+      background-color: #f7a9b8;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
   
