--- a/corporal.html
+++ b/corporal.html
@@ -26,11 +26,59 @@
   <h1>Cuidado Corporal</h1>
   <p>Una piel saludable comienza con una rutina corporal efectiva: exfoliación, hidratación y bienestar integral con ingredientes naturales.</p>
   <ul>
-    <li>Exfoliantes naturales (sal marina, azúcar, café)</li>
+    <div class="producto">
+      <img src="images/Aceitecorporal.png" alt="Aceitecorporal">
+      <h3>Aceite corporal</h3>
+      <p class="precio">32.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
   
-    <li>Hidratación diaria con cremas o aceites</li>
-    <li>Masajes relajantes</li>
-    <li>Rutinas para piel seca o sensible</li>
+    <div class="producto">
+      <img src="images/Aceitecorporalalmendras.png" alt="Aceitecorporalalmendras">
+      <h3>Aceite corporal de almendras</h3>
+      <p class="precio">32.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/cremamanos.png" alt="cremamanos">
+      <h3>crema de manos</h3>
+      <p class="precio">25.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/cremaparamanos.png" alt="cremaparamanos">
+      <h3>crema para manos </h3>
+      <p class="precio">25.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/cremaylocioncorporal.png" alt="cremaylocioncorporal">
+      <h3>crema y locion corporal </h3>
+      <p class="precio">40.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/geldebaño.png" alt="geldebaño">
+      <h3>gel de baño </h3>
+      <p class="precio">35.000 c/u</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
   </ul>
   <p><a href="index.html">← Volver al inicio</a></p>
 </body>
