--- a/facial.html
+++ b/facial.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cuidado Facial</title>
   <link rel="stylesheet" href="estilos.css/styles.css">
+  <script defer src="carrito.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
