--- a/capilar.html
+++ b/capilar.html
@@ -26,10 +26,71 @@
   <h1>Cuidado Capilar</h1>
   <p>Aprende cómo nutrir tu cabello con productos naturales, desde aceites esenciales hasta rutinas de lavado sin químicos agresivos.</p>
   <ul>
-    <li>Champús sin sulfatos</li>
-    <li>Mascarillas caseras</li>
-    <li>Uso de aceites como coco, argán o jojoba</li>
-    <li>Técnicas de masaje capilar</li>
+    
+    <div class="producto">
+      <img src="images/desenredantemilagros.png" alt="desenredantemilagros">
+      <h3>desenredante milagros</h3>
+      <p class="precio">31.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/acondicionadordeaguacte.png" alt="acondicionadordeaguacte">
+      <h3>acondicionador de aguacate</h3>
+      <p class="precio">37.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+
+  <div class="producto">
+      <img src="images/kitdecrecimiento.png" alt="kitdecrecimiento">
+      <h3>kit de crecimiento</h3>
+      <p class="precio"> 138.000</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/MascarillaCapilarMilagros.png" alt="MascarillaCapilarMilagros">
+      <h3>mascarilla capilar de milagros </h3>
+      <p class="precio">32.000 </p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/shampoo.png" alt="shampoo">
+      <h3>shampoo ritual botanico</h3>
+      <p class="precio">33.000 c/u</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/shampoolaposion.png" alt="shampoolaposion">
+      <h3>shampoo la posion</h3>
+      <p class="precio">35.000 c/u</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+
+    <div class="producto">
+      <img src="images/Tratamientobioreporalizador.png" alt="Tratamientobioreporalizador">
+      <h3>tratamiento biorepolarizador</h3>
+      <p class="precio">28.000 c/u</p>
+      <a href="https://wa.me/5491123456789?text=quierocomprar" class="btn-comprar" target="_blank">
+        Comprar
+      </a>
+    </div>
+    
   </ul>
   <p><a href="index.html">← Volver al inicio</a></p>
 </body>
